--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100&display=swap");
+.section-hero .container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.section-hero .container .row {
+  height: 600px;
+}
+
 :root {
   box-sizing: border-box;
 }
@@ -14,15 +22,30 @@
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
-  width: 100vh;
+  background-attachment: fixed;
   background-image: linear-gradient(90deg, rgba(230, 101, 135, 0.6) 0%, rgba(240, 148, 88, 0.6) 100%), url("../images/xbody-bg.webp");
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 
 .body-gradient {
-  background: linear-gradient(0deg, #e66587 0%, #f09458 100%);
-  opacity: 0.6;
-}/*# sourceMappingURL=index.css.map */
+  background: linear-gradient(90deg, #e66587 0%, #f09458 100%);
+}
+
+.main-wrapper {
+  color: white;
+  height: 200vh;
+  max-width: 75%;
+  margin: 0 auto;
+  margin-top: 6em;
+}
+
+.flex {
+  display: flex;
+}
+
+.centered {
+  justify-content: center;
+  align-items: center;
+}/*# sourceMappingURL=main.css.map */
