--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100&display=swap");
+@import "./partials/index";
 
 :root {
   box-sizing: border-box;
@@ -15,16 +15,31 @@
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
-  width: 100vh;
+  background-attachment: fixed;
   background-image: linear-gradient(90deg, #e6658799 0%, #f0945899 100%),
     url("../images/xbody-bg.webp");
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 
 .body-gradient {
-  background: linear-gradient(0deg, #e66587 0%, #f09458 100%);
-  opacity: 0.6;
+  background: linear-gradient(90deg, #e66587 0%, #f09458 100%);
+}
+
+.main-wrapper {
+  color: white;
+  height: 200vh;
+  max-width: 75%;
+  margin: 0 auto;
+  margin-top: 6em;
+}
+
+.flex {
+  display: flex;
+}
+
+.centered {
+  justify-content: center;
+  align-items: center;
 }
