--- a/css/main.scss
+++ b/css/main.scss
@@ -14,17 +14,17 @@
 
 body {
   font-family: "Poppins", sans-serif;
+
   height: 100vh;
   background-attachment: fixed;
-  background-image: linear-gradient(90deg, #e6658799 0%, #f0945899 100%),
-    url("../images/xbody-bg.webp");
+  background-image: $gradient-apaque, url("../images/xbody-bg.webp");
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .body-gradient {
-  background: linear-gradient(90deg, #e66587 0%, #f09458 100%);
+  background: $gradient;
 }
 
 .main-wrapper {
@@ -39,7 +39,15 @@ body {
   display: flex;
 }
 
+.column {
+  flex-direction: column;
+}
+
 .centered {
   justify-content: center;
   align-items: center;
+}
+
+a {
+  text-decoration: none;
 }
