--- a/css/partials/_main.scss
+++ b/css/partials/_main.scss
@@ -1,5 +1,3 @@
-@import "./partials/index";
-
 :root {
   box-sizing: border-box;
 }
@@ -50,4 +48,13 @@ body {
 
 a {
   text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
 }
