--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -1,7 +1,8 @@
 nav {
+  transform: scale(0);
   margin-right: 70px;
-  @include transition;
   transform-origin: 100% 50%;
+  @include transition;
 
   a {
     font-size: 12px;
@@ -41,17 +42,38 @@ nav {
   content: "\2192";
 }
 
+/* menu-bar styles */
+
 .menu-icon {
   flex-direction: column;
-
   width: 20px;
   height: 30px;
   cursor: pointer;
 }
 
 .menu-bar {
+  display: inline-block;
   height: 2px;
   width: 100%;
   background-color: #fff;
   margin: 2px 0;
+  @include transition;
+}
+
+.menu-icon.open > .menu-bar:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 4px);
+}
+.menu-icon.open > .menu-bar:nth-child(2) {
+  opacity: 0;
+}
+.menu-icon.open > .menu-bar:nth-child(3) {
+  transform: rotate(315deg) translate(5px, -3px);
+}
+
+nav.active {
+  transform: scale(1);
+}
+
+.menu-icon.open {
+  width: 23px;
 }
