--- a/css/partials/_typography.scss
+++ b/css/partials/_typography.scss
@@ -1,10 +1,3 @@
-h1 {
-  font-size: 36px;
-  color: white;
-  font-weight: 500;
-  margin: 10px 0 20px;
-}
-
 .hero-small {
   font-size: 12px;
   font-weight: 300;
@@ -15,4 +8,32 @@ h1 {
 
 .capitalize {
   text-transform: capitalize;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 36px;
+  color: white;
+  font-weight: 500;
+  margin: 10px 0 20px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h6 {
+  font-size: 14px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 300;
 }
