--- a/css/index.css
+++ b/css/index.css
@@ -51,19 +51,6 @@ a {
   text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
-}
-
-h3 {
-  font-size: 24px;
-}
-
 .hero-small {
   font-size: 12px;
   font-weight: 300;
@@ -171,6 +158,10 @@ nav a:hover {
 .btn span:nth-child(1) {
   margin-right: 10px;
   font-size: 14px;
+}
+
+.btn-gradient {
+  background-image: linear-gradient(90deg, #e66587 0%, #f09458 100%);
 }
 
 .arrow-right::before {
@@ -306,12 +297,29 @@ nav.active {
 .section-service .service-item {
   padding: 0 15px;
 }
+.section-service .service-item:hover .overlay {
+  opacity: 1;
+}
+.section-service .item-header {
+  position: relative;
+}
+.section-service .item-header .overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.89);
+  opacity: 0;
+  transition: all 0.3s ease 0s;
+}
 .section-service .item-body {
-  margin-top: 30px;
+  margin-top: 24px;
 }
 .section-service h6 {
   margin-bottom: 10px;
 }
 .section-service img {
   width: 100%;
+  border-radius: 0;
 }/*# sourceMappingURL=index.css.map */
