--- a/css/partials/_service.scss
+++ b/css/partials/_service.scss
@@ -23,15 +23,37 @@
 
   .service-item {
     padding: 0 15px;
+
+    &:hover .overlay {
+      opacity: 1;
+    }
+  }
+
+  .item-header {
+    position: relative;
+
+    .overlay {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.89);
+      opacity: 0;
+      @include transition;
+    }
   }
 
   .item-body {
-    margin-top: 30px;
+    margin-top: 24px;
   }
+
   h6 {
     margin-bottom: 10px;
   }
+
   img {
     width: 100%;
+    border-radius: 0;
   }
 }
