--- a/css/index.css
+++ b/css/index.css
@@ -345,17 +345,30 @@ nav.active {
 
 .carousel {
   width: 100%;
-  height: 350px;
+  height: 450px;
   margin-top: 3em;
+}
+.carousel h6 {
+  margin-top: 0.5em;
+  color: black;
+  text-transform: uppercase;
+}
+.carousel p {
+  color: #777;
+  max-width: 350px;
+  margin: 0 auto;
+  margin-top: 0.5em;
 }
 .carousel .carousel-wrapper {
   display: flex;
+  height: 100%;
   width: 100%;
   flex-flow: row nowrap;
   overflow: hidden;
   transition: all 0.5s ease;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
+  position: relative;
 }
 .carousel .slide {
   flex: none;
@@ -367,13 +380,25 @@ nav.active {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  position: relative;
+}
+.carousel .slide div {
+  position: absolute;
+  bottom: -8.5em;
+  width: 100%;
+  height: 35%;
+  display: none;
+  text-align: center;
 }
 .carousel .slide:nth-child(1) {
   margin-left: -34%;
 }
+.carousel .slide.active div {
+  display: block;
+}
 
 .dot-container {
-  margin-top: 3em;
+  margin-top: 1.8em;
   padding: 1em;
   text-align: center;
   display: flex;
@@ -401,4 +426,49 @@ nav.active {
 }
 .dot-container .dot.active {
   background-color: #e66587;
+}
+
+.section-story {
+  padding: 90px 0;
+  position: relative;
+  z-index: 1;
+}
+.section-story .row {
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 15px;
+  z-index: 3;
+}
+.section-story .story-title {
+  width: 25%;
+  padding: 0 15px;
+}
+.section-story .story-box {
+  padding: 60px 90px;
+  width: 46.5%;
+  background-color: white;
+}
+.section-story .story-box h6 {
+  color: #222;
+  margin-bottom: 15px;
+}
+.section-story .story-box p {
+  color: #777;
+  margin-bottom: 16px;
+}
+.section-story .story-box a {
+  padding: 8px 30px;
+}
+.section-story::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url("../../images/story-bg.jpg.webp");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  z-index: -1;
 }/*# sourceMappingURL=index.css.map */
