--- a/css/partials/_works.scss
+++ b/css/partials/_works.scss
@@ -21,19 +21,31 @@
 
 .carousel {
   width: 100%;
-  height: 350px;
+  height: 450px;
   margin-top: 3em;
 
-  //background-color: #ccc;
+  h6 {
+    margin-top: 0.5em;
+    color: black;
+    text-transform: uppercase;
+  }
+
+  p {
+    color: #777;
+    max-width: 350px;
+    margin: 0 auto;
+    margin-top: 0.5em;
+  }
 
   .carousel-wrapper {
     display: flex;
-    //background-color: antiquewhite;
+    height: 100%;
     width: 100%;
     flex-flow: row nowrap;
     overflow: hidden;
     transition: all 0.5s ease;
     scroll-snap-type: x mandatory;
+    position: relative;
   }
 
   .slide {
@@ -41,22 +53,34 @@
     width: 50%;
     margin: 0 3em;
     height: 320px;
-
-    //background-color: #ccc;
     scroll-snap-align: center;
     background-image: url("../../images/slide.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    position: relative;
+
+    div {
+      position: absolute;
+      bottom: -8.5em;
+      width: 100%;
+      height: 35%;
+      display: none;
+      text-align: center;
+    }
   }
 
   .slide:nth-child(1) {
     margin-left: -34%;
   }
+
+  .slide.active div {
+    display: block;
+  }
 }
 
 .dot-container {
-  margin-top: 3em;
+  margin-top: 1.8em;
   padding: 1em;
   text-align: center;
   //background-color: antiquewhite;
