--- a/css/index.scss
+++ b/css/index.scss
@@ -9,3 +9,5 @@
 @import "./partials/service";
 @import "./partials/works";
 @import "./partials/story";
+@import "./partials/subscribe";
+@import "./partials/footer";
