--- a/css/partials/_service.scss
+++ b/css/partials/_service.scss
@@ -31,6 +31,7 @@
 
   .item-header {
     position: relative;
+    background-color: aqua;
 
     .overlay {
       position: absolute;
@@ -53,7 +54,9 @@
   }
 
   img {
+    display: inline-block;
     width: 100%;
     border-radius: 0;
+    margin: 0;
   }
 }
