--- a/css/partials/_works.scss
+++ b/css/partials/_works.scss
@@ -3,16 +3,19 @@
   background-color: white;
 
   .container {
-    //max-width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
   }
+
   .header {
     text-align: center;
     margin-bottom: 30px;
   }
+
   h3 {
     color: #222;
   }
+
   span {
     font-size: 14px;
     color: #777;
