Fix services image fit problem

--- a/css/partials/_works.scss
+++ b/css/partials/_works.scss
@@ -1,6 +1,6 @@
 .section-works {
-  padding: 100px 0;
-  background-color: white;
+  padding: 100px 0 84px;
+  background-color: #f9f9ff;
 
   .container {
     max-width: 1140px;
@@ -83,7 +83,7 @@
 }
 
 .dot-container {
-  margin-top: 1.8em;
+  margin-top: 2.3em;
   padding: 1em;
   text-align: center;
   //background-color: antiquewhite;
