--- a/css/index.css
+++ b/css/index.css
@@ -154,6 +154,7 @@ nav a:hover {
   color: #222222;
   font-weight: 500;
   position: relative;
+  z-index: 1;
   transition: all 0.3s ease 0s;
 }
 .btn span {
@@ -162,6 +163,26 @@ nav a:hover {
 .btn span:nth-child(1) {
   margin-right: 10px;
   font-size: 14px;
+}
+
+.btn-hero::after {
+  content: "";
+  position: absolute;
+  background-image: linear-gradient(90deg, #e66587 0%, #f09458 100%);
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  z-index: -1;
+  transition: all 0.3s ease 0s;
+}
+.btn-hero:hover::after {
+  opacity: 1;
+}
+.btn-hero:hover {
+  border-color: transparent;
 }
 
 .btn-gradient {
@@ -311,6 +332,8 @@ nav.active {
 }
 .section-service .service-item {
   padding: 0 15px;
+  display: flex;
+  flex-direction: column;
 }
 .section-service .service-item:hover .overlay {
   opacity: 1;
@@ -330,7 +353,7 @@ nav.active {
   transition: all 0.3s ease 0s;
 }
 .section-service .item-body {
-  margin-top: 24px;
+  margin-top: 30px;
 }
 .section-service h6 {
   margin-bottom: 10px;
@@ -338,13 +361,16 @@ nav.active {
 .section-service img {
   display: inline-block;
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 0;
   margin: 0;
 }
 
 .section-works {
-  padding: 100px 0;
-  background-color: white;
+  padding: 100px 0 84px;
+  background-color: #f9f9ff;
 }
 .section-works .container {
   max-width: 1140px;
@@ -417,7 +443,7 @@ nav.active {
 }
 
 .dot-container {
-  margin-top: 1.8em;
+  margin-top: 2.3em;
   padding: 1em;
   text-align: center;
   display: flex;
@@ -542,6 +568,9 @@ nav.active {
   gap: 1.89em;
   padding: 0 1em;
   color: #222;
+}
+.section-widget .card {
+  margin-top: 30px;
 }
 .section-widget .card:hover .card-icon {
   border-color: transparent;
