--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -26,6 +26,7 @@ nav {
   color: #222222;
   font-weight: 500;
   position: relative;
+  z-index: 1;
   @include transition;
 
   span {
@@ -35,6 +36,30 @@ nav {
   span:nth-child(1) {
     margin-right: 10px;
     font-size: 14px;
+  }
+}
+
+.btn-hero {
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: $gradient;
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    z-index: -1;
+    @include transition;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
+
+  &:hover {
+    border-color: transparent;
   }
 }
 
