--- a/css/partials/_service.scss
+++ b/css/partials/_service.scss
@@ -23,6 +23,8 @@
 
   .service-item {
     padding: 0 15px;
+    display: flex;
+    flex-direction: column;
 
     &:hover .overlay {
       opacity: 1;
@@ -46,7 +48,7 @@
   }
 
   .item-body {
-    margin-top: 24px;
+    margin-top: 30px;
   }
 
   h6 {
@@ -56,6 +58,8 @@
   img {
     display: inline-block;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 0;
     margin: 0;
   }
